<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JoozdLog</string>
    <string name="app_name_full">Joozdlog Pilot\'s Logbook</string>
    <string name="pilot_logbook">PILOT LOGBOOK</string>
    <string name="holders_name">Holder\'s name(s)</string>
    <string name="holders_licence_number">Holder\'s licence number</string>
    <string name="holders_address">HOLDER\'S ADDRESS:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_link_intent_filter">App Link intent Filter</string>
    <string name="flightNumberHint">FlightNumber</string>
    <string name="date">Date</string>
    <string name="airField">Airport</string>
    <string name="name">Name</string>
    <string name="aircraft">Aircraft</string>
    <string name="search">Search</string>
    <string name="search_n_flights">Search(%1$d Flights)</string>
    <string name="n_flights">%1$d Flights</string>
    <string name="search_type">Search Type</string>
    <string name="_continue">Continue</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="retry">Retry</string>
    <string name="hint">Hint</string>
    <string name="clear">Clear</string>
    <string name="add_flight">Add Flight</string>
    <string name="edit_flight">Edit Flight</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="timeOut">Time Out</string>
    <string name="timeIn">Time In</string>
    <string name="namePic">Name PIC</string>
    <string name="namePilot2">Other names</string>
    <string name="remarks">Remarks</string>
    <string name="simTime">Simulator Time</string>
    <string name="picus">PICUS</string>
    <string name="simluator">Simulator</string>
    <string name="pic">PIC</string>
    <string name="save">Save</string>
    <string name="mpString">MP</string>
    <string name="ifrString">IFR</string>
    <string name="dualString">Dual</string>
    <string name="instructorString">Instructor</string>
    <string name="dualInstructorString">Dual/Instr</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_saved">Email saved</string>
    <string name="email_saved_message">Your email address has been saved and a confirmation mail will be sent. Please check your inbox on this device, and open the provided confirmation link with Joozdlog.</string>
    <string name="email_address">Email address</string>
    <string name="not_an_email_address">Not an email address</string>
    <string name="no_email_address_entered_but_wanted_for_backup">No email address has been found, but one is needed for automatic backup emails. Please enter it in Settings.</string>
    <string name="server_not_an_email_address_please_enter_again">The server did not like the entered email address for a scheduled action that requires one. Please enter it again in Settings.</string>
    <string name="server_reported_email_not_verified">The server reported that your entered email address is not verified.\nPlease update your email address in Settings to get a new verification mail.</string>
    <string name="enter_email">Enter email</string>
    <string name="verified_email">%1$s (verified)</string>
    <string name="not_verified_email">%1$s (not verified)</string>
    <string name="same_email_as_saved_do_you_want_to_reconfirm">The entered email is the same as the currently saved email. Do you want to re-confirm your email address?</string>
    <string name="email_reason">Please enter your email for backup and account recovery purposes.\nYour email address will not be stored outside your phone.</string>
    <string name="autovalue">Auto Values</string>
    <string name="takeoff">Takeoff</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="departure">departure</string>
    <string name="arrival">arrival</string>
    <string name="alt_with_placeholder">alt: %1$s\'</string>
    <string name="landing">Landing</string>
    <string name="autoland">Autoland</string>
    <string name="totalTimes">Total Times</string>
    <string name="editAircraft">Edit Aircraft</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_airport">Unknown Airport</string>
    <string name="copilot">Co-pilot</string>
    <string name="paperLogbook">Paper Logbook</string>
    <string name="pickNames">Search Names</string>
    <string name="anyName">Name</string>
    <string name="addThis">Add This</string>
    <string name="remove">Remove last</string>
    <string name="select">Select</string>
    <string name="pickAirports">Search Airports</string>
    <string name="setThis">Set This</string>
    <string name="flightTimes">Times</string>
    <string name="timesFunctions">Times / Functions</string>
    <string name="augmentedCrew">Augmented crew</string>
    <string name="crewSize">Crew Size</string>
    <string name="reduce_crew">Reduce crew</string>
    <string name="increase_crew">Reduce crew</string>
    <string name="landingInSeat">Landing in seat</string>
    <string name="in_seat">In seat</string>
    <string name="time_for_to_ldg">Time for TO/LDG</string>
    <string name="dual">DUAL</string>
    <string name="augmented">Augmented</string>
    <string name="savedFlight">Saved flight</string>
    <string name="deletedFlight">Deleted flight</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="newFlight">New Flight</string>
    <string name="registration">Registration</string>
    <string name="registrations">Registrations</string>
    <string name="signature">Signature</string>
    <string name="pf">PF</string>
    <string name="sim">Sim</string>
    <string name="sign">Sign</string>
    <string name="savePdf">Save to PDF</string>
    <string name="flights_synced">Joozdlog Flights Synchronized with Cloud</string>
    <string name="searchAircraft">SearchAircraft</string>
    <string name="loading_aircraft_and_airports_database">Loading Aircraft and Airports Database</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="hidden_password">"••••••••"</string>
    <string name="newUser">New User</string>
    <string name="landings">Landings</string>
    <string name="takeoffs_landings">Takeoffs/Landings</string>
    <string name="arrowRight">➔</string>
    <string name="settings">Settings</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="do_something">Do Something</string>
    <string name="error">Error</string>
    <string name="error_dialog_message">An error %1$d has occurred. Please let Joozd know though the "Feedback" menu option.\n\nError description:\n%2$s</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="once">Once</string>
    <string name="warning">Warning</string>
    <string name="ignore_for_one_day">Ignore for 1 day</string>
    <string name="verify">Verify</string>
    <string name="tbd">TBD</string>
    <string name="times_per_year">Times per year</string>
    <string name="last_12_months">Last 12 Months</string>
    <string name="times_per_type">Times per type</string>
    <string name="times_per_reg">Times per registration</string>
    <string name="arrivals_per_airport">Arrivals per airport</string>
    <string name="login">Log In</string>
    <string name="instructor">INSTRUCTOR</string>
    <string name="done">Done!</string>
    <string name="newUserActivityHeader">Create cloud sync account</string>
    <string name="almost_done">Almost done!</string>
    <string name="working_ellipsis">Working…</string>
    <string name="custom_airport_caution_text">You are entering a custom airport. If you do not enter lat/long coordinates (TODO: NOT IMPLEMENTED IN THIS VERSION), automatic night time errors might occur.\n(You are reminded in Edit Flight screen by (!) next to airport identifier)</string>
    <string name="airport_not_found_no_night_time">Airport location unknown, no night time logged.</string>
    <string name="file_not_found_title">File not found</string>
    <string name="file_not_found_message">An error occurred while retreiving the file you are trying to import.</string>
    <string name="unknown_file_title">Unknown File</string>
    <string name="unknown_file_message">The file you are trying to import into Joozdlog is not supported. If you want it to be, please mail it (or preferably a few) to joozdlog@joozd.nl and I might support it in a future version.</string>
    <string name="fatal_error_when_parsing_file">Fatal error when parsing file. This is a bug. Please send the file to joozdlog@joozd.nl so it can be fixed.</string>
    <string name="bad_intent_error">Error importing file: bad_intent_error</string>
    <string name="error_saving_flights">Error saving flights, could not get flights to save from file.</string>
    <string name="unknown_link_title">Unknown Link</string>
    <string name="unknown_link_message">This link is unknown or contains bad data. Please check the link and try again.</string>
    <string name="total_time_too_large">Total time cannot be more than off blocks to on blocks</string>
    <string name="invalid_total_time">Could not parse total time</string>
    <string name="new_user_error_0001">Error creating new user: error 0001. This error is not expected to occur. Please inform Joozd though the "feedback" menu.</string>
    <string name="no_internet">Cannot connect to server</string>
    <string name="need_internet">You need an internet connection for this.</string>
    <string name="server_problem">Cannot connect to server</string>
    <string name="useIataAirports">Now using IATA airport codes</string>
    <string name="useIcaoAirports">Now using ICAO airport codes</string>
    <string name="cloud_explanation" tools:ignore="Typos">Sync your data to the cloud!\nThis is not a backup, read terms&amp;conditions.\nInactive accounts can be removed.</string>
    <string name="you_can_set_settings_in_settings">If you want to adjust any more settings (switching on automatic backup emails for example), take a look at the Settings menu after you click \"done\"!</string>
    <string name="balanceForward">Balance Forward</string>
    <string name="signOut">Sign out</string>
    <string name="create_account">Create new account</string>
    <string name="you_are_signed_in_as">You are signed in as <![CDATA[<b>%1$s</b>]]>.</string>
    <string name="i_accept_terms">I accept the terms and conditions</string>
    <string name="about">About Joozdlog</string>
    <string name="icao_iata_description">Do you want to display airports in ICAO (4 letter) or as IATA (3 letter) format?</string>
    <string name="mark_incomplete_without_pic">PIC name required</string>
    <string name="mark_incomplete_without_pic_description">If no PIC name is set on a completed flight, flight will be marked as incomplete</string>
    <string name="standard_augmented_time"><![CDATA[<b>Augmented Crew takeoff/landing time</b><br><small>%1$s minutes</small>&nbsp;]]></string>
    <string name="fix_flights_db">Remove duplicate flights from DB</string>
    <string name="backup_interval_time"><![CDATA[<b>Remind me to make a backup every</b><br><small>%1$s</small>&nbsp;]]></string>
    <string name="backup_via_email">Auto-send backup emails</string>
    <string name="backup_cloud_description">An email with your logbook will be emailed to you at the same interval as you get reminded to make a backup. You will still be reminded if server cannot be reached.</string>
    <string name="backup_now">Backup now</string>
    <string name="use_dark_mode">Use Dark mode</string>
    <string name="help">Help</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="qr_code">QR code</string>
</resources>