<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  JoozdLog Pilot's Logbook
  ~  Copyright (c) 2020 Joost Welle
  ~
  ~      This program is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU Affero General Public License as
  ~      published by the Free Software Foundation, either version 3 of the
  ~      License, or (at your option) any later version.
  ~
  ~      This program is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU Affero General Public License for more details.
  ~
  ~      You should have received a copy of the GNU Affero General Public License
  ~      along with this program.  If not, see https://www.gnu.org/licenses
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NewUserActivityLayout"
    tools:context=".ui.activities.newUserActivity.NewUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/page_2_header"
                style="@style/HeaderText"
                android:layout_marginTop="32dp"
                android:text="@string/newUserActivityHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/page_2_explanation"
                style="@style/SecondaryTextCentered"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/cloud_explanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_2_header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                style="@style/InputLayout"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/page_2_explanation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textNoSuggestions|text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/tcCheckbox"
                style="@style/SecondaryText"
                android:layout_marginTop="16dp"
                android:text="@string/i_accept_terms"
                app:layout_constraintStart_toStartOf="@+id/usernameTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout" />

            <!-- TODO make this a button -->
            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_white"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/skipThisStepTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tcCheckbox" />

            <TextView
                android:id="@+id/youAreSignedInAsTextView"
                style="@style/SecondaryText"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/you_are_signed_in_as"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/continueTextView"
                app:layout_constraintHeight_default="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signOutTextView"
                style="@style/DialogButtonText"
                android:paddingStart="6dp"
                android:paddingTop="6dp"
                android:paddingEnd="18dp"
                android:paddingBottom="6dp"
                android:text="@string/signOut"
                app:layout_constraintBottom_toBottomOf="@+id/youAreSignedInAsTextView"
                app:layout_constraintStart_toEndOf="@+id/youAreSignedInAsTextView"
                app:layout_constraintTop_toTopOf="@+id/youAreSignedInAsTextView" />

            <TextView
                android:id="@+id/skipThisStepTextView"
                style="@style/DialogButtonText"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/skip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/continueTextView"
                style="@style/DialogButtonText"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/_continue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>