<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  JoozdLog Pilot's Logbook
  ~  Copyright (c) 2020-2022 Joost Welle
  ~
  ~      This program is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU Affero General Public License as
  ~      published by the Free Software Foundation, either version 3 of the
  ~      License, or (at your option) any later version.
  ~
  ~      This program is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU Affero General Public License for more details.
  ~
  ~      You should have received a copy of the GNU Affero General Public License
  ~      along with this program.  If not, see https://www.gnu.org/licenses
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NewUserActivityLayout"
    tools:context=".ui.activities.newUserActivity.NewUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                style="@style/HeaderText.Bold"
                android:text="@string/almost_done"
                app:layout_constraintBottom_toTopOf="@+id/icaoIataDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/icaoIataDescription"
                style="@style/SecondaryTextCentered"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/icao_iata_description"
                app:layout_constraintBottom_toTopOf="@+id/icaoIataSwitch"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="32dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/icaoIataSwitch"
                style="@style/SettingsActivitySwitch"
                android:layout_marginTop="16dp"
                android:text="@string/useIataAirports"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icaoIataDescription"/>

            <TextView
                android:id="@+id/textView5"
                style="@style/SecondaryTextCentered"
                android:layout_marginTop="16dp"
                android:text="@string/you_can_set_settings_in_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icaoIataSwitch" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
        android:id="@+id/doneButton"
        style="@style/DialogButtonText"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/backButton"
        style="@style/DialogButtonText"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>